// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkFieldset should render correctly with checkbox component 1`] = `
<fieldset
  className="bpk-fieldset"
>
  <label
    className="bpk-checkbox"
  >
    <input
      className="bpk-checkbox__input"
      disabled={false}
      id="terms_and_conditions_checkbox"
      name="terms_and_conditions"
      type="checkbox"
    />
    <svg
      className="bpk-checkbox__icon"
      height="18"
      style={
        Object {
          "height": ".75rem",
          "width": ".75rem",
        }
      }
      viewBox="0 0 24 24"
      width="18"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
      />
    </svg>
    <span
      className="bpk-checkbox__label"
    >
      I accept the terms and conditions
    </span>
  </label>
  <div
    onTransitionEnd={[Function]}
    style={
      Object {
        "MozTransition": "height 200ms ease ",
        "OTransition": "height 200ms ease ",
        "WebkitTransition": "height 200ms ease ",
        "height": 0,
        "msTransition": "height 200ms ease ",
        "overflow": "visible",
        "transition": "height 200ms ease ",
      }
    }
  >
    <div>
      <div
        className="bpk-form-validation__container"
      >
        <div
          className="bpk-form-validation bpk-form-validation--is-checkbox"
          id="terms_and_conditions_checkbox_validation_message"
        >
          You must accept the terms and conditions to continue
        </div>
      </div>
    </div>
  </div>
</fieldset>
`;

exports[`BpkFieldset should render correctly with checkbox component and "required" attribute 1`] = `
<fieldset
  className="bpk-fieldset"
>
  <label
    className="bpk-checkbox"
  >
    <input
      className="bpk-checkbox__input"
      disabled={false}
      id="terms_and_conditions_checkbox"
      name="terms_and_conditions"
      type="checkbox"
    />
    <svg
      className="bpk-checkbox__icon"
      height="18"
      style={
        Object {
          "height": ".75rem",
          "width": ".75rem",
        }
      }
      viewBox="0 0 24 24"
      width="18"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
      />
    </svg>
    <span
      className="bpk-checkbox__label"
    >
      I accept the terms and conditions
      <span
        className="bpk-checkbox__asterisk"
      >
        *
      </span>
    </span>
  </label>
  <div
    onTransitionEnd={[Function]}
    style={
      Object {
        "MozTransition": "height 200ms ease ",
        "OTransition": "height 200ms ease ",
        "WebkitTransition": "height 200ms ease ",
        "height": 0,
        "msTransition": "height 200ms ease ",
        "overflow": "visible",
        "transition": "height 200ms ease ",
      }
    }
  >
    <div>
      <div
        className="bpk-form-validation__container"
      >
        <div
          className="bpk-form-validation bpk-form-validation--is-checkbox"
          id="terms_and_conditions_checkbox_validation_message"
        >
          You must accept the terms and conditions to continue
        </div>
      </div>
    </div>
  </div>
</fieldset>
`;

exports[`BpkFieldset should render correctly with input component 1`] = `
<fieldset
  className="bpk-fieldset"
>
  <label
    className="bpk-label"
    htmlFor="name_input"
  >
    Name
  </label>
  <input
    aria-invalid={false}
    aria-required={false}
    className="bpk-input"
    disabled={false}
    id="name_input"
    name="name"
    placeholder="e.g. Joe Bloggs"
    type="text"
    value=""
  />
  <div
    onTransitionEnd={[Function]}
    style={
      Object {
        "MozTransition": "height 200ms ease ",
        "OTransition": "height 200ms ease ",
        "WebkitTransition": "height 200ms ease ",
        "height": 0,
        "msTransition": "height 200ms ease ",
        "overflow": "visible",
        "transition": "height 200ms ease ",
      }
    }
  >
    <div>
      <div
        className="bpk-form-validation__container"
      >
        <div
          className="bpk-form-validation"
          id="name_input_validation_message"
        >
          Please enter a name
        </div>
      </div>
    </div>
  </div>
</fieldset>
`;

exports[`BpkFieldset should render correctly with input component and "disabled" attribute 1`] = `
<fieldset
  className="bpk-fieldset"
>
  <label
    className="bpk-label"
    htmlFor="name_input"
  >
    Name
  </label>
  <input
    aria-invalid={false}
    aria-required={false}
    className="bpk-input"
    disabled={false}
    id="name_input"
    name="name"
    placeholder="e.g. Joe Bloggs"
    type="text"
    value=""
  />
  <div
    onTransitionEnd={[Function]}
    style={
      Object {
        "MozTransition": "height 200ms ease ",
        "OTransition": "height 200ms ease ",
        "WebkitTransition": "height 200ms ease ",
        "height": 0,
        "msTransition": "height 200ms ease ",
        "overflow": "visible",
        "transition": "height 200ms ease ",
      }
    }
  >
    <div>
      <div
        className="bpk-form-validation__container"
      >
        <div
          className="bpk-form-validation"
          id="name_input_validation_message"
        >
          Please enter a name
        </div>
      </div>
    </div>
  </div>
</fieldset>
`;

exports[`BpkFieldset should render correctly with input component and "required" attribute 1`] = `
<fieldset
  className="bpk-fieldset"
>
  <label
    className="bpk-label"
    htmlFor="name_input"
  >
    Name
    <span
      className="bpk-label__asterisk"
    >
      *
    </span>
  </label>
  <input
    aria-invalid={false}
    aria-required={true}
    className="bpk-input bpk-input--valid"
    disabled={false}
    id="name_input"
    name="name"
    placeholder="e.g. Joe Bloggs"
    type="text"
    value=""
  />
  <div
    onTransitionEnd={[Function]}
    style={
      Object {
        "MozTransition": "height 200ms ease ",
        "OTransition": "height 200ms ease ",
        "WebkitTransition": "height 200ms ease ",
        "height": 0,
        "msTransition": "height 200ms ease ",
        "overflow": "visible",
        "transition": "height 200ms ease ",
      }
    }
  >
    <div>
      <div
        className="bpk-form-validation__container"
      >
        <div
          className="bpk-form-validation"
          id="name_input_validation_message"
        >
          Please enter a name
        </div>
      </div>
    </div>
  </div>
</fieldset>
`;

exports[`BpkFieldset should render correctly with input component and "valid" attribute 1`] = `
<fieldset
  className="bpk-fieldset"
>
  <label
    className="bpk-label"
    htmlFor="name_input"
  >
    Name
  </label>
  <input
    aria-invalid={false}
    aria-required={false}
    className="bpk-input bpk-input--valid"
    disabled={false}
    id="name_input"
    name="name"
    placeholder="e.g. Joe Bloggs"
    type="text"
    value=""
  />
  <div
    onTransitionEnd={[Function]}
    style={
      Object {
        "MozTransition": "height 200ms ease ",
        "OTransition": "height 200ms ease ",
        "WebkitTransition": "height 200ms ease ",
        "height": 0,
        "msTransition": "height 200ms ease ",
        "overflow": "visible",
        "transition": "height 200ms ease ",
      }
    }
  >
    <div>
      <div
        className="bpk-form-validation__container"
      >
        <div
          className="bpk-form-validation"
          id="name_input_validation_message"
        >
          Please enter a name
        </div>
      </div>
    </div>
  </div>
</fieldset>
`;

exports[`BpkFieldset should render correctly with input component and "valid" attribute equal to false 1`] = `
<fieldset
  className="bpk-fieldset"
>
  <label
    className="bpk-label"
    htmlFor="name_input"
  >
    Name
  </label>
  <input
    aria-describedby="name_input_validation_message"
    aria-invalid={true}
    aria-required={false}
    className="bpk-input bpk-input--invalid"
    disabled={false}
    id="name_input"
    name="name"
    placeholder="e.g. Joe Bloggs"
    type="text"
    value=""
  />
  <div
    onTransitionEnd={[Function]}
    style={
      Object {
        "MozTransition": "height 200ms ease ",
        "OTransition": "height 200ms ease ",
        "WebkitTransition": "height 200ms ease ",
        "height": "auto",
        "msTransition": "height 200ms ease ",
        "overflow": "visible",
        "transition": "height 200ms ease ",
      }
    }
  >
    <div>
      <div
        className="bpk-form-validation__container"
      >
        <div
          className="bpk-form-validation bpk-form-validation--appear"
          id="name_input_validation_message"
        >
          Please enter a name
        </div>
      </div>
    </div>
  </div>
</fieldset>
`;

exports[`BpkFieldset should render correctly with select component 1`] = `
<fieldset
  className="bpk-fieldset"
>
  <label
    className="bpk-label"
    htmlFor="fruits_select"
  >
    Fruits
  </label>
  <select
    aria-invalid={false}
    aria-required={false}
    className="bpk-select"
    disabled={false}
    id="fruits_select"
    name="fruits"
    value=""
  >
    <option
      value=""
    >
      Please select...
    </option>
    <option
      value="apples"
    >
      Apples
    </option>
    <option
      value="oranges"
    >
      Oranges
    </option>
    <option
      value="pears"
    >
      Pears
    </option>
    <option
      disabled={true}
      value="tomato"
    >
      Tomato
    </option>
  </select>
  <div
    onTransitionEnd={[Function]}
    style={
      Object {
        "MozTransition": "height 200ms ease ",
        "OTransition": "height 200ms ease ",
        "WebkitTransition": "height 200ms ease ",
        "height": 0,
        "msTransition": "height 200ms ease ",
        "overflow": "visible",
        "transition": "height 200ms ease ",
      }
    }
  >
    <div>
      <div
        className="bpk-form-validation__container"
      >
        <div
          className="bpk-form-validation"
          id="fruits_select_validation_message"
        >
          Please select a fruit
        </div>
      </div>
    </div>
  </div>
</fieldset>
`;

exports[`BpkFieldset should render correctly with select component and "required" attribute 1`] = `
<fieldset
  className="bpk-fieldset"
>
  <label
    className="bpk-label"
    htmlFor="fruits_select"
  >
    Fruits
    <span
      className="bpk-label__asterisk"
    >
      *
    </span>
  </label>
  <select
    aria-invalid={false}
    aria-required={true}
    className="bpk-select"
    disabled={false}
    id="fruits_select"
    name="fruits"
    value=""
  >
    <option
      value=""
    >
      Please select...
    </option>
    <option
      value="apples"
    >
      Apples
    </option>
    <option
      value="oranges"
    >
      Oranges
    </option>
    <option
      value="pears"
    >
      Pears
    </option>
    <option
      disabled={true}
      value="tomato"
    >
      Tomato
    </option>
  </select>
  <div
    onTransitionEnd={[Function]}
    style={
      Object {
        "MozTransition": "height 200ms ease ",
        "OTransition": "height 200ms ease ",
        "WebkitTransition": "height 200ms ease ",
        "height": 0,
        "msTransition": "height 200ms ease ",
        "overflow": "visible",
        "transition": "height 200ms ease ",
      }
    }
  >
    <div>
      <div
        className="bpk-form-validation__container"
      >
        <div
          className="bpk-form-validation"
          id="fruits_select_validation_message"
        >
          Please select a fruit
        </div>
      </div>
    </div>
  </div>
</fieldset>
`;
